<resources>
    <string name="app_name">CashbackTestApp</string>
    <string name="app_name_name">Cashback App</string>
    <string name="kes">Kes</string>
    <string name="_5">5</string>
    <string name="_2_5">2.5</string>
    <string name="back">back</string>
    <string name="com">Com</string>
    <string name="mount_kenya">Mount Kenya</string>
    <string name="_200ml">200ML</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="documents">Documents</string>
    <string name="account">Account</string>
    <string name="offers">Offers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_offers">View Offers</string>
    <string name="_22_november">22 November</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="cashback">CashBack</string>
</resources>