<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/m_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:enabled="true"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/m_order"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:enabled="true"
        android:title="@string/dashboard"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/m_document"
        android:icon="@drawable/ic_baseline_document_scanner_24"
        android:enabled="true"
        android:title="@string/documents"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/m_offers"
        android:icon="@drawable/ic_baseline_local_offer_24"
        android:enabled="true"
        android:title="@string/offers"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/m_account"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:enabled="true"
        android:title="@string/account"
        app:showAsAction="ifRoom"/>

</menu>